fix: sidebar overflow

--- a/src/routes/Dashboard/dashboard.module.scss
+++ b/src/routes/Dashboard/dashboard.module.scss
@@ -26,7 +26,6 @@
 
   .sidebar {
     width: 23vw;
-    min-width: 240px;
     padding: 25px;
 
     @media screen and (max-width: 820px) {
